# agentic-systems-takehome

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  fixtures_loader.py
app/api/: routes.py
app/harness/: runner.py  state.py
app/planner/: base.py  llm.py  rule_based.py
app/policy/: bypass.py  engine.py
app/schemas/: api.py  domain.py
app/tools/: bypass_tool.py  catalog.py  draft.py  erp.py  policy_tool.py  registry.py
docs/: AI_USAGE.md  ARCHITECTURE.md  README.en.md  README.md
evals/: run_bypass_eval.py  run_planner_eval.py
evals/data/: bypass_eval_set.json  planner_eval_set.json
scripts/: demo.py
tests/: conftest.py  test_api.py  test_approval_gate.py  test_bypass.py  test_bypass_gate.py  test_catalog.py  test_harness.py  test_policy_engine.py
tests/data/: requests.json
